--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "pg": "^8.9.0",
     "react": "^18.2.0",
