--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd backend && node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
