--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "twilio": "^4.7.2",
     "web-vitals": "^2.1.4"
